--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2024"
 
 [dependencies]
 crossterm = "0.29"
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.145"
 
 [[bin]]
 name = "yuno-faqman"
