--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2024"
 crossterm = "0.29"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
+reqwest = { version = "0.13.1", features = ["json"] }
+tokio = { version = "1", features = ["full"] }
 
 [[bin]]
 name = "yuno-faqman"
