--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 reqwest = { version = "0.13.1", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
+uuid = { version = "1.19", features = ["serde", "v4"] }
+lazy_static = "1.5.0"
 
 [[bin]]
 name = "yuno-faqman"
